# procenty

./: .env.prod  .flake8  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  a.yml  app.py  build.wd  containers.json  czas.txt  docker-compose.yaml  docker-compose.yml  generate_model.py  mods22.yml  modwst2.yml  nn.yml  proc.py  public-endpoint.json  pyproject.toml  requirements.txt  sqlcomm.md  todo.md  wibor.md  wynik_mod2.yml  wynik_mod4.yml
bank/: __init__.py  kredyt.py  lokata.py  nadplaty.py  portfel.py  stopy.py
docs/: build.md  dbmigrate.txt  notes.txt  praktyki.txt  ubuntu-service  uwagi  zasoby_pr.md
examples/: kredyt.py
flask/: Dockerfile  app.py  wibor.md
gry/: scenariusz1.py
models/: danew1.yml  infl3.json  infl33.json  inflacja_model_1.json  mod1.yml  mod2.yml  mod3.yml  mod4.yml  mods.yml  nowy_model.yml  nowy_model2.yml
services/web/: Dockerfile  Dockerfile.prod  devserver.py  gunicorn.sh  manage.py  pyproject.toml  requirements.txt  test.py
services/web/migrations/versions/: 537594bf47ab_logowania.py  d2ae485155f9_start.py  fc1d0fe31d50_logowania2.py
services/web/obliczeniakredytowe/: __init__.py  config.py  wsgi.py
services/web/obliczeniakredytowe/models/: __init__.py
services/web/obliczeniakredytowe/routes/: admin.py  dom.py  rrso.py  wps.py
services/web/obliczeniakredytowe/seeds/: user.csv
services/web/obliczeniakredytowe/static/: chart_kapital.js  chart_koszty.js  chart_wibor.js  plopln3m_d.csv  plopln6m_d.csv  style.css
services/web/obliczeniakredytowe/templates/: base.html  base_rrso.html
services/web/obliczeniakredytowe/templates/admin/: 500_generic.html  login.html  status.html
services/web/obliczeniakredytowe/templates/dom/: animuj.html  kredyt.html  obliczkredyt.html  pokazkredyty.html  usun_kredyt.html
services/web/obliczeniakredytowe/templates/rrso/: rrso.html
services/web/project/: __init__.py  config.py  database.db  init_db.py  models.py  routes.py  schema.sql  sqlcomm.md  write_seed.py  wsgi.py
services/web/project/forms/: __init__.py
services/web/project/models/: __init__.py  modwst2 copy.yml  nowy.yml
services/web/project/results/: yyy.yml
services/web/project/routes/: admin.py  dom.py  wps.py
services/web/project/seeds/: .~lock.miesieczne_wskazniki_cen_towarow_i_uslug_konsumpcyjnych_od_1982_roku.csv#  dom.csv  miesieczne_wskazniki_cen_towarow_i_uslug_konsumpcyjnych_od_1982_roku.csv  user.csv
services/web/project/static/: chart_inflacja.js  chart_kapital.js  chart_koszty.js  chart_wibor.js  drawChart.js  graph.js  plopln3m_d.csv  plopln6m_d.csv  style.css
services/web/project/templates/: _form_helper.html  base.html  daty.html  dodajkredyt.html  domy.html  formularz.html  kiedy.html  kredyt.html  login.html  mojkredyt.html  opis.html  podsumowanie.html  pokazkredyty.html  symulacja.html  wykres.html
services/web/project/templates/dom/: kredyt.html  obliczkredyt.html  pokazkredyty.html
services/web/project/utils/: create_document.py  generate_model.py  inflacja.py  proc.py
services/web/utils/: generate_model.py  inflacja.py  proc.py  rrso.py
(+131 files in other folders)
