[tool.poetry]
name = "procenty"
version = "0.1.31"
description = ""
authors = ["szalaj <mszalajski@gmail.com>"]
readme = "README.md"
packages = [{include="*", from="src"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = "^2.8.2"
scipy = "^1.11.4"
pytest = "^7.4.3"
pendulum = "^2.1.2"
pandas = "^2.2.2"
loguru = "^0.7.2"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
