[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["szalaj <mszalajski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
flask = "2.2.5"
obliczeniakredytowe = {path = "../../pkgs/obliczeniakredytowe", develop = true}
utils = {path = "../../pkgs/utils", develop = true}
apscheduler = "3.10.1"
argcomplete = "2.0.0"
cairocffi = "1.5.1"
cairosvg = "2.7.0"
certifi = ">=2023.7.22"
cffi = "1.15.1"
charset-normalizer = "3.0.1"
click = "8.0.4"
colorama = "0.4.4"
cssselect2 = "0.7.0"
defusedxml = "0.7.1"
dominate = "2.7.0"
flask-apscheduler = "1.12.4"
flask-bootstrap4 = "4.0.2"
flask-login = "0.6.2"
flask-sqlalchemy = "3.0.3"
flask-wtf = "1.1.1"
greenlet = "2.0.2"
gunicorn = "20.1.0"
idna = "3.4"
importlib-metadata = "4.8.3"
itsdangerous = "2.0.1"
jinja2 = "3.0.3"
lxml = "4.9.2"
markupsafe = "2.1.2"
numpy = "1.23.3"
packaging = "23.0"
pandas = "1.4.4"
psycopg2-binary = "2.9.4"
pycparser = "2.21"
python-dateutil = "2.8.2"
python-docx = "0.8.11"
pytz = "2022.1"
pytz-deprecation-shim = "0.1.0.post0"
pyyaml = "6.0"
reportlab = ">=3.6.13"
requests = ">=2.31.0"
scipy = "1.10.1"
six = "1.16.0"
sqlalchemy = "2.0.6"
svglib = "1.5.1"
tinycss2 = "1.2.1"
typing-extensions = "4.5.0"
tzdata = "2023.3"
tzlocal = "4.3"
urllib3 = ">=1.26.17"
userpath = "1.8.0"
visitor = "0.1.3"
waitress = "2.1.2"
webencodings = "0.5.1"
werkzeug = "2.2.3"
wtforms = "3.0.1"
zipp = "3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
